User function : getId (Retourne l'id de l'utilisateur courent) User function : toJson (Retourne l'User courent au format JSON sans les dates systemes)
Template : header implémenté ave CSS et JS

--- a/README
+++ b/README
@@ -7,3 +7,13 @@ user
     id
     pseudo
     password
+    function (  getId -> retourne l'id de l'user courent
+                toJSON -> retourne l'objet au format json sans les date de crea, update et remove
+            )
+
+
+
+A noter :
+    - Une fois loggé ont peux avoir l'id de l'utilisateur connecté à tout moment via le cookie idUser
+
+
