--- a/README
+++ b/README
@@ -23,3 +23,7 @@ A noter :
     - Une fois loggé ont peux avoir l'id de l'utilisateur connecté à tout moment via le cookie idUser
 
 
+Gmail LibrarizeMe :
+    Adr : librarize@gmail.com
+    pwd : LibrarizeMe3
+
