Modifications informations personnelles de l'utilisateur.

--- a/README
+++ b/README
@@ -69,6 +69,7 @@ MAIL :
     Envoye de mail quand :
         Création de compte
         Demande de vérification de mdp
+        Modification des informations personnelles
 
     Le logo header du mail est sur un hébergeur public
 
