Modifications informations personnelles de l'utilisateur.

--- a/README
+++ b/README
@@ -64,7 +64,7 @@ MAIL :
 
     Gmail LibrarizeMe :
         Adr : librarize@gmail.com
-        pwd : LibrarizeMe3
+        pwd : ask to Greg
 
     Envoye de mail quand :
         Création de compte
