--- a/README
+++ b/README
@@ -29,6 +29,7 @@
 
 
 IMPORTANT !! : Créer base "librarizeme"
+npm install nodemailer
 
 ----------------------------------------------------------------------------------------------------------------------
 
