Modification de mot de passe

--- a/README
+++ b/README
@@ -66,6 +66,7 @@ MAIL :
         Création de compte
         Demande de vérification de mdp
         Modification des informations personnelles
+        Modification du mdp
 
     Le logo header du mail est sur un hébergeur public
 
