--- a/README
+++ b/README
@@ -1,6 +1,6 @@
                         _______________________________________________________________________________
                        /                                                                               \
-  ____________________/                         !!!!!  SCRUM ORGANAZ  !!!!!                             \___________________
+  ____________________/                         !!!!!  LIBRARIZE ME  !!!!!                              \___________________
  /                                                                                                                         /
 /_________________________________________________________________________________________________________________________/|
 |                                                                                                                        | |
@@ -32,6 +32,7 @@ IMPORTANT !! : Créer base "librarizeme"
 "npm install nodemailer"  Pour permettre au serveur d'envoyer
 "npm install --save express-fileupload" Pour permettre au serveur de recevoir des fichiers
 "npm install amazon-product-api" Pour l'API Amazon
+"npm install mongoose" Pour utiliser une bdd NoSQL
 
 ----------------------------------------------------------------------------------------------------------------------
 
@@ -83,7 +84,7 @@ MAIL :
 
                         _______________________________________________________________________________
                        /                                                                               \
-  ____________________/                         !!!!!  SCRUM ORGANAZ  !!!!!                             \___________________
+  ____________________/                         !!!!!  LIBRARIZE ME  !!!!!                              \___________________
  /                                                                                                                         /
 /_________________________________________________________________________________________________________________________/|
 |                                                                                                                        | |
