Affiche les produits de l'utilisateurs courant final

--- a/README
+++ b/README
@@ -65,10 +65,12 @@ Swap :
     id
     idUser
     asinProduct
-    etat
+    etat        (0/enPret/rouge -- 1/dispo/vert -- 2/dispoMaisPasPourPreter/bleu)
     startDate
     enDate
     idUserTo
+
+
 
 ----------------------------------------------------------------------------------------------------------------------
 
