--- a/README
+++ b/README
@@ -70,6 +70,7 @@ Swap :
     enDate
     idUserTo
 
+Recherche dichotomique router/swap.js ligne 105
 
 
 ----------------------------------------------------------------------------------------------------------------------
