add etat for friendLibrary

--- a/README
+++ b/README
@@ -70,7 +70,7 @@ Swap :
     enDate
     idUserTo
 
-Recherche dichotomique router/swap.js ligne 105
+Recherche dichotomique router/swap.js function getEtatByAsin
 
 
 ----------------------------------------------------------------------------------------------------------------------
